@@ -13,6 +13,10 @@ synaptic (0.62.9) UNRELEASEDunstable; urgency=low
   * gtk/rgfetchprogress.{cc,h}:
     - remove the custom progress rendering and replace with
       stock gtk progress
+  * gtk/glade/dialog_conffile.glade:
+    - make the conffile dialog resizable (LP: #228928)
+  * gtk/rgdebinstallprogress.cc:
+    - use fixed size font on conffile changes
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 18:27:02 +0200
 
